src/objects/RT1__ReadyTalkMeetingMember__c.object
<CustomObject>
    <fields>
        <fullName>RT1__Company__c</fullName>
        <description>Lead or Contact Company</description>
        <formula>RT1__Contact__r.Account.Name &amp;  RT1__Lead__r.Company</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact in Salesforce CRM that is related to the ReadyTalk Meeting Member.</description>
        <inlineHelpText>The Contact that is related to the ReadyTalk Meeting Member.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ReadyTalk Meeting History</relationshipLabel>
        <relationshipName>ReadyTalk_Meeting_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RT1__DurationMinutes__c</fullName>
        <label>Duration (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RT1__Email__c</fullName>
        <description>Lead or Contact Email</description>
        <formula>IF(NOT(ISBLANK(RT1__Contact__c)), RT1__Contact__r.Email, IF(NOT(ISBLANK(RT1__Lead__r.Email)), RT1__Lead__r.Email,  RT1__RegistrationEmail__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__EntryTime__c</fullName>
        <description>Attendance Entry Time</description>
        <inlineHelpText>Most recent date &amp; time the meeting member entered the meeting.</inlineHelpText>
        <label>Attendance Entry Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RT1__ExitTime__c</fullName>
        <description>Attendance Exit Time</description>
        <inlineHelpText>Most recent date &amp; time the meeting member left the meeting.</inlineHelpText>
        <label>Attendance Exit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RT1__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Lead in Salesforce CRM that is related to the ReadyTalk Meeting Member.</description>
        <inlineHelpText>The Lead that is related to the ReadyTalk Meeting Member.</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>ReadyTalk Meeting History</relationshipLabel>
        <relationshipName>ReadyTalk_Meeting_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RT1__MeetingDateTime__c</fullName>
        <formula>RT1__ReadyTalkMeeting__r.RT1__MeetingDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RT1__MeetingName__c</fullName>
        <formula>RT1__ReadyTalkMeeting__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__Meeting_Status__c</fullName>
        <formula>TEXT(RT1__ReadyTalkMeeting__r.RT1__CCMeetingStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__No_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__No_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__Phone__c</fullName>
        <description>Contact Phone</description>
        <formula>RT1__Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__Poll_Answer1__c</fullName>
        <label>Poll Answer 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__Poll_Answer2__c</fullName>
        <label>Poll Answer 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__Poll_Answer3__c</fullName>
        <label>Poll Answer 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__Poll_Question1__c</fullName>
        <label>Poll Question 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RT1__Poll_Question2__c</fullName>
        <label>Poll Question 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RT1__Poll_Question3__c</fullName>
        <label>Poll Question 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RT1__PostSurvey_Answer1__c</fullName>
        <label>Post Event Survey Answer 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__PostSurvey_Answer2__c</fullName>
        <label>Post Event Survey Answer 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__PostSurvey_Answer3__c</fullName>
        <label>Post Event Survey Answer 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__PostSurvey_Question1__c</fullName>
        <label>Post Event Survey Question 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__PostSurvey_Question2__c</fullName>
        <label>Post Event Survey Question 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__PostSurvey_Question3__c</fullName>
        <label>Post Event Survey Question 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__ReadyTalkMeeting__c</fullName>
        <description>ReadyTalk Meeting Title</description>
        <label>Meeting Title</label>
        <referenceTo>RT1__ReadyTalkMeeting__c</referenceTo>
        <relationshipLabel>ReadyTalk Meeting Members</relationshipLabel>
        <relationshipName>ReadyTalk_Meeting_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RT1__ReadyTalkRegistrationID__c</fullName>
        <externalId>true</externalId>
        <label>ReadyTalk Registration ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RT1__ReadyTalk_Meeting_Date_Time__c</fullName>
        <description>ReadyTalk Meeting Date &amp; Time</description>
        <formula>RT1__ReadyTalkMeeting__r.RT1__MeetingDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationAddress1__c</fullName>
        <description>ReadyTalk Registration Address 1</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationAddress2__c</fullName>
        <description>ReadyTalk Registration Address 2</description>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationAddress3__c</fullName>
        <description>ReadyTalk Registration Address 3</description>
        <label>Address 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationAnnualRevenue__c</fullName>
        <description>ReadyTalk Registration Annual Revenue</description>
        <label>Annual Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationAnswer1__c</fullName>
        <description>ReadyTalk Custom Registration Answer 1</description>
        <label>Custom Answer 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationAnswer2__c</fullName>
        <description>ReadyTalk Custom Registration Answer 2</description>
        <label>Custom Answer 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationAnswer3__c</fullName>
        <description>ReadyTalk Custom Registration Answer 3</description>
        <label>Custom Answer 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationCity__c</fullName>
        <description>ReadyTalk Registration City</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationComments__c</fullName>
        <description>ReadyTalk Registration Comments</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationCompany__c</fullName>
        <description>ReadyTalk Registration Company</description>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationCountry__c</fullName>
        <description>ReadyTalk Registration Country</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationDepartment__c</fullName>
        <description>ReadyTalk Registration Department</description>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationEmail__c</fullName>
        <description>ReadyTalk Registration Email</description>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationFax__c</fullName>
        <description>ReadyTalk Registration Fax Number</description>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationFirstName__c</fullName>
        <label>Registration First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationIndustry__c</fullName>
        <description>ReadyTalk Registration Industry</description>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationJobTitle__c</fullName>
        <description>ReadyTalk Registration Job Title</description>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationLastName__c</fullName>
        <label>Registration Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationMobilePhone__c</fullName>
        <description>ReadyTalk Registration Mobile Phone</description>
        <label>Mobile Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationName__c</fullName>
        <formula>RT1__RegistrationFirstName__c &amp; &quot; &quot; &amp;  RT1__RegistrationLastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationNumberOfEmployees__c</fullName>
        <description>ReadyTalk Registration Number of Employees</description>
        <label>Number of Employees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationPhone__c</fullName>
        <description>ReadyTalk Registration Phone</description>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationPurchasingTimeFrame__c</fullName>
        <description>ReadyTalk Registration Purchasing Time Frame</description>
        <label>Purchasing Time Frame</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationQuestion1__c</fullName>
        <description>ReadyTalk Custom Registration Question 1</description>
        <label>Custom Question 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationQuestion2__c</fullName>
        <description>ReadyTalk Custom Registration Question 2</description>
        <label>Custom Question 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationQuestion3__c</fullName>
        <description>ReadyTalk Custom Registration Question 3</description>
        <label>Custom Question 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationState__c</fullName>
        <description>ReadyTalk Registration State</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationSurveyId__c</fullName>
        <label>Registration Survey Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationWebsite__c</fullName>
        <description>ReadyTalk Registration Website</description>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationZip__c</fullName>
        <description>ReadyTalk Registration Zip Code</description>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__SendInvite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Invite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__Status__c</fullName>
        <description>ReadyTalk Meeting Member Status</description>
        <label>Meeting Member Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>No-Show</fullName>
                </value>
                <value>
                    <fullName>Email Failure: Opt-Out</fullName>
                </value>
                <value>
                    <fullName>Email Failure: Address Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RT1__Unmatched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unmatched</label>
        <type>Checkbox</type>
    </fields>
    <label>ReadyTalk Meeting Member</label>
    <nameField>
        <label>Meeting Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ReadyTalk Meeting Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>